--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 body {
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
+}
+
+#welcome-section,
+#projects,
+#contact {
+  scroll-margin: 160px;
 }
 
 #navbar {
@@ -16,6 +25,15 @@ body {
   height: 150px;
 }
 
+@media (max-width: 650px) {
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 #navbar ul {
   list-style: none;
   display: flex;
@@ -26,27 +44,37 @@ body {
   font-size: 1.5rem;
 }
 
+@media (max-width: 650px) {
+  #navbar ul {
+  }
+}
+
 #navbar a {
   text-decoration: none;
 }
 
-h1 {
-  margin-top: 200px;
-}
-
-.about {
+.welcome-section {
+  border: 3px solid green;
+  margin-top: 150px;
   height: 100vh;
+  background-color: green;
+  color: #fff;
 }
 
 .about_h1 {
   display: flex;
   justify-content: center;
   font-size: 3rem;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
+}
+
+@media (max-width: 650px) {
+  .about_h1 {
+    font-size: 2rem;
+  }
 }
 
 .about_img_h2 {
- 
   display: flex;
   justify-content: space-around;
 }
@@ -55,13 +83,69 @@ h1 {
   object-fit: cover;
   width: 100%;
   height: 350px;
+  border-radius: 50%;
 }
 
 .about_h2 {
-  
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  
+  font-size: 2rem;
+}
 
+@media (max-width: 650px) {
+  .about_h2 {
+    font-size: 1.5rem;
+    margin: 0 0.5rem 0 1.2rem;
+  }
+}
+
+.about-div-h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* projects */
+
+.projects-tile {
+  text-align: center;
+  font-size: 3rem;
+}
+
+.group-1-2 {
+  display: flex;
+  justify-content: space-around;
+}
+
+@media (max-width: 830px) {
+  .group-1-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.project-img {
+  border: 1px solid;
+}
+
+.project-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  background-color: grey;
+  color: white;
+  margin-bottom: 20px;
+}
+
+.footer-ul {
+  height: 75px;
+  background-color: #eee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.footer-ul li {
+  padding-left: 20px;
 }
